<resources>
    <string name="app_name">First App</string>

    <string name="action_settings">Settings</string>
    <string name="week_number">Week number</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="rpe">RPE</string>
    <string name="day_number">Day number</string>
    <string name="go">Go</string>
    <string-array name="pip_2_exercises_1">
        <item>Paused Squat</item>
        <item>Deficit Deadlift</item>
        <item>Competition Squat</item>
        <item>Competition Deadlift</item>
    </string-array>
    <string-array name="pip_2_exercises_2">
        <item>Paused Bench</item>
        <item>Closegrip Bench</item>
        <item>Competition Bench</item>
        <item>Touch and Go Bench</item>
    </string-array>
    <string-array name="pip_2_exercises_3">
        <item>Incline Bench</item>
        <item>Front Squat</item>
        <item>Overhead Press</item>
        <item>Deficit Straight Legged Deadlift</item>
    </string-array>
    <string-array name="week_number_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="day_number_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="rpe_array">
        <item>5.5</item>
        <item>6</item>
        <item>6.5</item>
        <item>7</item>
        <item>7.5</item>
        <item>8</item>
        <item>8.5</item>
        <item>9</item>
        <item>9.5</item>
        <item>10</item>
    </string-array>
    <string name="title_activity_calculated">calculatedActivity</string>
    <string name="title_activity_pwr_to_lift_swipe">pwrToLiftSwipe</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
